--- a/listaAgendamentos.css
+++ b/listaAgendamentos.css
@@ -22,13 +22,10 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    width: 80%;
-    max-width: 10000px;
-    margin-top: 40px;
+    width: 160vh;
+    max-width: 1000vh;
 }
-main .btn{
-    margin-left: 157px;
-}
+
 header {
     background-color: #007bff;
     color: white;
@@ -37,14 +34,30 @@ header {
     text-align: center;
    }
 .form-container {
-    width: 30%;
+    width: 42vh;
     padding: 20px;
+    height: 75vh;
     background-color: rgba(255, 255, 255, 0.9); 
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     gap: 10px;
+    position: relative;
+    margin-top: 3vh;
+}
+.form-container button{
+    margin-left: 10vh;
+}
+textarea {
+    width: 38vh; 
+    height: 10vh; 
+    resize: none;
+    padding: 10px; 
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+    font-family: Arial, sans-serif; 
+    font-size: 16px; 
 }
 
 .form-container label {
@@ -53,26 +66,28 @@ header {
 }
 
 .form-container input {
-    width: 100%;
-    height: 30px;
-    padding: 8ddpx;
+    width: 40vh;
+    padding: 7px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
 .btn {
-    
+    display: flex;
+    justify-content: center;
     background-color: #007bff;
     color: white;
-    width: 160px;
+    width: 100%; 
+    max-width: 160px; 
     border-radius: 10px;
     padding: 10px;
     font-size: 16px;
     cursor: pointer;
     text-align: center;
-    margin-top:150px;   cursor: pointer;
+    margin-top: 20px; 
     transition: background-color 0.3s ease;
 }
+
 .btn:hover {
     background-color: #0056b3;
 }
@@ -83,11 +98,10 @@ header {
 }
 
 .agendamentos-container {
-    margin-top: 60px;
-    background-color: white;
-    height: 400px;
-    background-color: white;
-    width: 60%;
+    margin-top: 16vh;
+    background-color: rgba(255, 255, 255, 0.9); 
+    height: auto;
+    width:90vh;
     padding: 10px;
     border-radius: 15px;    
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -108,7 +122,7 @@ th{
 td{
     padding: 10px;
     border: 2px solid black;
-    width: 110px;
+    width: 110vh;
 }
 
 
@@ -122,11 +136,13 @@ td{
 .botao-container .btn {
     width: 150px;
 }
-.icon-top{
+
+.icon-top {
     position: absolute;
     top: 10px;
     left: 10px;
 }
+
 .icon-top img {
     margin-top: 80px;
     width: 100px;
@@ -139,12 +155,14 @@ td{
     top: 10px;
     right: 10px;
 }
-.icon-right img{
+
+.icon-right img {
     width: 200px;
     height: auto;
 }
+
 select {
-    width: 520px;
+    width:42vh;
     padding: 7px;
     border: 1px solid #ccc;
     border-radius: 5px;
