--- a/ListarProfissionais.css
+++ b/ListarProfissionais.css
@@ -24,9 +24,9 @@ header {
     background-color: #007bff;
     color: white;
     padding: 20px;
-    width: 2400px;
     text-align: center;
-   }
+    width: 2000vh;
+}
 
 
 .profissionais-container {
