--- a/agendar.css
+++ b/agendar.css
@@ -11,7 +11,6 @@ body {
     align-items: center;
     
 }
-
 .title {
     font-family: 'Times New Roman', Times, serif;
     font-size: 36px;
@@ -67,22 +66,20 @@ textarea {
     font-size: 16px; 
 }
 
+
 .image-container {
-    width: 40%;
-     margin-bottom: 90%;
-     margin-left: 45%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .image-container img {
-    margin-bottom: 500%;
-
     max-width: 100%;
     height: auto;
 }
 
 .btn {
-    display: flex;
-    justify-content: center;
     align-items: center;
     background-color: #007bff;
     color: white;
