--- a/listaAgendamentos.css
+++ b/listaAgendamentos.css
@@ -17,40 +17,29 @@ body {
     color: white;
     text-align: center;
 }
+
 main {
     color: blue;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    width: 160vh;
-    max-width: 1000vh;
+    width: 120vh;
+    height: 40vh;
+    max-width: 150vh;
 }
-
+main button{
+    margin-left: 25%;
+}
 header {
     background-color: #007bff;
     color: white;
     padding: 20px;
-    width: 2400px;
     text-align: center;
-   }
-.form-container {
-    width: 42vh;
-    padding: 20px;
-    height: 75vh;
-    background-color: rgba(255, 255, 255, 0.9); 
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    position: relative;
-    margin-top: 3vh;
+    width: 2000vh;
 }
-.form-container button{
-    margin-left: 10vh;
-}
-textarea {
-    width: 38vh; 
+   textarea {
+    width: 33vh; 
     height: 10vh; 
     resize: none;
     padding: 10px; 
@@ -60,34 +49,47 @@ textarea {
     font-size: 16px; 
 }
 
+.form-container {
+    width: 30%;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.9); 
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+h2{
+    display: flex;
+    justify-content: center;
+}
 .form-container label {
     font-size: 20px;
     font-weight: bold;
 }
-
 .form-container input {
-    width: 40vh;
-    padding: 7px;
+    width: 100%;
+    height: 30px;
+    padding: 8ddpx;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
 .btn {
-    display: flex;
-    justify-content: center;
+justify-content: center;
+align-items: center;
     background-color: #007bff;
     color: white;
-    width: 100%; 
-    max-width: 160px; 
+    width: 160px;
     border-radius: 10px;
     padding: 10px;
     font-size: 16px;
     cursor: pointer;
     text-align: center;
-    margin-top: 20px; 
-    transition: background-color 0.3s ease;
-}
+     cursor: pointer;
 
+transition: background-color 0.3s ease;
+}
 .btn:hover {
     background-color: #0056b3;
 }
@@ -98,10 +100,11 @@ textarea {
 }
 
 .agendamentos-container {
-    margin-top: 16vh;
-    background-color: rgba(255, 255, 255, 0.9); 
-    height: auto;
-    width:90vh;
+    margin-top: 60px;
+    background-color: white;
+    height: 400px;
+    background-color: white;
+    width: 60%;
     padding: 10px;
     border-radius: 15px;    
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -122,7 +125,7 @@ th{
 td{
     padding: 10px;
     border: 2px solid black;
-    width: 110vh;
+    width: 110px;
 }
 
 
@@ -136,13 +139,11 @@ td{
 .botao-container .btn {
     width: 150px;
 }
-
-.icon-top {
+.icon-top{
     position: absolute;
     top: 10px;
     left: 10px;
 }
-
 .icon-top img {
     margin-top: 80px;
     width: 100px;
@@ -155,14 +156,12 @@ td{
     top: 10px;
     right: 10px;
 }
-
-.icon-right img {
+.icon-right img{
     width: 200px;
     height: auto;
 }
-
 select {
-    width:42vh;
+    width: 101%;
     padding: 7px;
     border: 1px solid #ccc;
     border-radius: 5px;
