--- a/assets/styles/ListarProfissionais.css
+++ b/assets/styles/ListarProfissionais.css
@@ -81,19 +81,21 @@ td{
 }
 
 .btn {
-    margin-top: 100px;
-    width: 160px;
-    height: 40px;
-    background-color: #007bff;
-    color: white;
-    border-radius: 10px;
+    padding: 15px;
+    align-self: center;
+    border-radius: 30px;
+    background-image: linear-gradient(#256a8a, #3383c1);
+    border: solid 1px #256a8a;
     font-size: 16px;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
     cursor: pointer;
-    transition: background-color 0.3s ease;
 }
 
-.btn:hover {
-    background-color: #0056b3;
+
+button:hover {
+    background-image: linear-gradient(#3383c1, #256a8a);
 }
 
 .icon-top {
