--- a/assets/styles/Login.css
+++ b/assets/styles/Login.css
@@ -11,8 +11,7 @@ body {
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background-color: brown;
-    background-image: url(imagen.png);
+    background-image: url(Background.png);
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
