--- a/assets/styles/listaAgendamentos.css
+++ b/assets/styles/listaAgendamentos.css
@@ -1,12 +1,23 @@
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+}
+
 body {
     background-image: url(assets/img/Background.png);
     background-size: cover;
+    display: flex;
+    height: 100vh;
     background-position: left;
     background-repeat: no-repeat;
+    position: relative;
     margin: 0;
     padding: 0;
-    height: 100vh;
-    display: flex;
+    
+    
     flex-direction: column;
     align-items: center;
 }
@@ -38,7 +49,7 @@ header {
    }
 .form-container {
     width: 30%;
-    padding: 20px;
+    padding: 10px;
     background-color: rgba(255, 255, 255, 0.9); 
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -55,27 +66,35 @@ header {
 .form-container input {
     width: 100%;
     height: 30px;
-    padding: 8ddpx;
+    padding: 8px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
 .btn {
-    
-    background-color: #007bff;
-    color: white;
-    width: 160px;
-    border-radius: 10px;
-    padding: 10px;
+    padding: 15px;
+    align-self: center;
+    border-radius: 30px;
+    background-image: linear-gradient(#256a8a, #3383c1);
+    border: solid 1px #256a8a;
     font-size: 16px;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
     cursor: pointer;
-    text-align: center;
-    margin-top:150px;   cursor: pointer;
-    transition: background-color 0.3s ease;
 }
-.btn:hover {
-    background-color: #0056b3;
+textarea {
+    width: 33vh; 
+    height: 10vh; 
+    resize: none;
+    padding: 10px; 
+    font-size: 16px; 
 }
+
+button:hover {
+    background-image: linear-gradient(#3383c1, #256a8a);
+}
+
 .agendamentos-container .btn{
     margin-right: 10px;
     margin-left: 10px;
@@ -144,7 +163,7 @@ td{
     height: auto;
 }
 select {
-    width: 460px;
+    width: 100%;
     padding: 7px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -157,4 +176,12 @@ select:focus {
     outline: none; 
     border-color: #007bff;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); 
+}
+textarea {
+    border-radius: 20px;
+    width: 33vh; 
+    height: 10vh; 
+    resize: none;
+    padding: 10px; 
+    font-size: 16px; 
 }
