--- a/assets/styles/menu.css
+++ b/assets/styles/menu.css
@@ -10,8 +10,7 @@ body {
     color: #404040;
     display: flex;
     height: 100vh;
-    background-color: brown;
-    background-image: url(imagen.png);
+    background-image: url(Background.png);
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
